--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 <body>
-<input type="text" id="tab_search"/ style="width:300px;">
+<input type="text" id="tab_search" style="width:300px;">
 <ul id="tcontainer">
 </ul>
   <script type="text/javascript" src="main.js"></script>
